# fdaml_coursebook

./: .gitignore  00_welcome.html  01_introduction.html  02_empirical_asset_returns 2.html  02_empirical_asset_returns.html  02_random_variables.html  03_estimation.html  03_univariate_models.html  04_dependence_matters.html  04_empirical_analysis.html  05_machine_learning.html  05_regression.html  06_time_series.html  07_pf_optimization.html  08_risk_management.html  09_machine_learning.html  10_machine_learning_applications.html  genindex 2.html  genindex.html  objects.inv  pyproject.toml  search 2.html  search.html  searchindex.js
.devcontainer/: devcontainer.json
_sources/: 01_introduction.ipynb  02_empirical_asset_returns.ipynb  02_random_variables.ipynb  03_univariate_models.ipynb  04_empirical_analysis.ipynb  05_regression.ipynb  06_time_series.ipynb  07_pf_optimization.ipynb
coursebook/: 00_welcome.ipynb  01_introduction.ipynb  02_empirical_asset_returns.ipynb  02_random_variables.ipynb  03_estimation.ipynb  03_univariate_models.ipynb  04_dependence_matters.ipynb  04_empirical_analysis.ipynb  05_machine_learning.ipynb  05_regression.ipynb  07_pf_optimization.ipynb  09_machine_learning.ipynb  _config.yml  _toc.yml  config.py  utils.py
coursebook/_build/.doctrees/: 00_welcome.doctree  01_introduction.doctree  02_empirical_asset_returns.doctree  02_random_variables.doctree  03_estimation.doctree  03_univariate_models 2.doctree  03_univariate_models.doctree  (+10 more)
streamlit_apps/: requirements.txt
streamlit_apps/asset_analyzer/: Asset_analyzer.py  requirements.txt
(+57 files in other folders)
