[project]
name = "fdaml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fake-useragent>=2.0.3",
    "fredapi>=0.5.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "setuptools>=75.8.0",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
]
