[project]
name = "fdaml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.2.0",
    "bs4>=0.0.2",
    "fake-useragent>=2.0.3",
    "fredapi>=0.5.2",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.54",
]

[dependency-groups]
dev = [
    "ghp-import>=2.1.0",
    "ipykernel>=6.29.5",
    "jupyter-book>=1.0.3",
]
